--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/avatar.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Vi's Portfolio</title>
   </head>
   <body>
-    <!-- <div id="cursor-outline"></div> -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
