--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/avatar.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Vi's Portfolio" />
+    <meta
+      property="og:image"
+      content="https://vi-nguyen.vercel.app/theme.png"
+    />
+    <meta property="og:url" content="https://vi-nguyen.vercel.app/" />
     <title>Vi's Portfolio</title>
   </head>
   <body>
