--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Vi's Portfolio" />
     <meta
       property="og:image"
-      content="https://vi-nguyen.vercel.app/theme.png"
+      content="https://vi-nguyen.vercel.app/theme.webp"
     />
     <meta property="og:url" content="https://vi-nguyen.vercel.app/" />
     <title>Vi's Portfolio</title>
